--- a/index.html
+++ b/index.html
@@ -9,17 +9,40 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" />
   <link href="css/normalize.css" rel="stylesheet" />
   <link href="css/reset.css" rel="stylesheet" />
-  <link href="css/styles.css" rel="stylesheet" />
+  <link href="css/calc.css" rel="stylesheet" />
 
 </head>
 <body>
     <div class="container">
     <div class="calculator">
+        <div class="calculator-display">0</div>
+        <div class="calculator-keys">
+
+            <button class="operator plus"> +</button>
+            <button class="operator minus"> -</button>
+            <button class="operator times"> &times;</button>
+            <button class="operator divide">÷</button>
+            <button class="number one">1</button>
+            <button class="number two">2</button>
+            <button class="number three">3</button>
+            <button class="number four">4</button>
+            <button class="number five">5</button>
+            <button class="number six">6</button>
+            <button class="number seven">7</button>
+            <button class="number eight">8</button>
+            <button class="number nine">9</button>
+            <button class="number zero">0</button>
+            <button class="number decimal">.</button>
+            <button class="number clear">C</button>
+            <button class="equal">=</button>   
+
+        </div>
 
 
 
     </div>
     </div>
+    <script src="js/calc.js"></script>
     
 </body>
 </html>
