--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
         <div class="calculator-display">0</div>
         <div class="calculator-keys">
 
-            <button class="plus" data-type="operator"> +</button>
-            <button class="minus" data-type="operator"> -</button>
-            <button class="times" data-type="operator"> &times;</button>
-            <button class="divide" data-type="operator">÷</button>
-            <button class="one" data-type="number">1</button>
-            <button class="two" data-type="number">2</button>
-            <button class="three" data-type="number">3</button>
-            <button class="four" data-type="number">4</button>
-            <button class="five" data-type="number">5</button>
-            <button class="six" data-type="number">6</button>
-            <button class="seven" data-type="number">7</button>
-            <button class="eight" data-type="number">8</button>
-            <button class="nine" data-type="number">9</button>
-            <button class="zero" data-type="number">0</button>
+            <button data-key="plus" data-type="operator"> +</button>
+            <button data-key="minus" data-type="operator"> -</button>
+            <button data-key="times" data-type="operator"> &times;</button>
+            <button data-key="divide" data-type="operator">÷</button>
+            <button data-key="one" data-type="number">1</button>
+            <button data-key="two" data-type="number">2</button>
+            <button data-key="three" data-type="number">3</button>
+            <button data-key="four" data-type="number">4</button>
+            <button data-key="five" data-type="number">5</button>
+            <button data-key="six" data-type="number">6</button>
+            <button data-key="seven" data-type="number">7</button>
+            <button data-key="eight" data-type="number">8</button>
+            <button data-key="nine" data-type="number">9</button>
+            <button data-key="zero" data-type="number">0</button>
             <button class="decimal" data-type="number">.</button>
-            <button class="clear" data-type="number">C</button>
-            <button class="equal">=</button>   
+            <button class="clear" data-type="clear">C</button>
+            <button data-key="equal" data-type="equal">=</button>   
 
         </div>
 
